# gst-openaichat

./: Cargo.toml  README.md  shell.nix
src/: filter.rs  lib.rs
src/filter/: imp.rs  openai_model.rs
